--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn test"
+    }
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -42,6 +47,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint-config-airbnb-base": "^14.2.0",
+    "husky": "^4.2.5",
     "jest-enzyme": "^7.1.2"
   }
 }
