--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn test"
+      "pre-commit": "eslint .",
+      "pre-push": "yarn test -- --watchAll=false"
     }
   },
   "eslintConfig": {
