--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "countries-finder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://muhammadakif.github.io/countries-finder",
   "dependencies": {
     "@apollo/client": "^3.1.1",
     "@material-ui/core": "^4.11.0",
